<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editSecretKeyword"
            android:hint="@string/hint_secret_keyword"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/editWhatFor"
            android:layout_alignEnd="@+id/editWhatFor" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editWhatFor"
            android:layout_below="@+id/editSecretKeyword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="text"
            android:hint="@string/hint_what_for" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editPasswordLength"
            android:layout_below="@+id/editWhatFor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:hint="@string/hint_length"
            android:text="15" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:id="@+id/btnGenerate"
            android:layout_below="@+id/specialCharsSwitch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/txtResult"
            android:layout_alignEnd="@+id/txtResult"
            android:layout_marginTop="1dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResult"
            android:layout_marginTop="10dp"
            android:editable="false"
            android:inputType="none"
            android:textIsSelectable="true"
            android:hint="@string/result"
            android:layout_below="@+id/btnGenerate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uppercase"
            android:id="@+id/uppercaseSwitch"
            android:layout_below="@+id/editPasswordLength"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowercase"
            android:id="@+id/lowercaseSwitch"
            android:layout_below="@+id/uppercaseSwitch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbers"
            android:id="@+id/numbersSwitch"
            android:layout_below="@+id/lowercaseSwitch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_chars"
            android:id="@+id/specialCharsSwitch"
            android:layout_below="@+id/numbersSwitch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="true" />

    </RelativeLayout>

</ScrollView>
